--- a/client/src/components/footer/Footer.css
+++ b/client/src/components/footer/Footer.css
@@ -1,9 +1,7 @@
 .section-footer {
-    width: 15vw;
-    height: 100vh;
-    background-color: var(--background-color);
-    transition: background-color 0.5s ease;
-    position: relative;
+    width: 0;
+    height: 0;
+    position: absolute;
   }
   
   .footer {
